@startuml

class GameField{

get_playg_round()
get_free_space()


}

class Snake{

get_head_position()
get_tail_positions()
get_move_direction()
update_move_direction()
move()
eat()
draw()
}

class Head{
}
class Tail{
}

class Food{
update_x_position()
update_y_position()
get_pos_x()
get_pos_y()
draw()
}

class FoodDispatcher{
place_food()
remove_food()
get_food_position()
draw()
}

class AI{
}


Snake "1" *-- "1" Head
Snake "1" *-- "0...399" Tail
FoodDispatcher "1" *-- "1" Food

AI -- Snake
AI -- FoodDispatcher

FoodDispatcher -- GameField
Snake -- GameField
AI -- GameField


@enduml